--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000002;
-	background-color: #E34150;
+	color: #00000D;
+	background-color: #1B8ECA;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 964px;
-	min-height: 986.8500000000001px;
+	min-height: 986.8499999999999px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -27,6 +27,7 @@
 {
 	margin-top: -38px;
 	margin-bottom: -63px;
+	width: 0.01px;
 }
 
 #u75-4
@@ -36,8 +37,8 @@
 	min-height: 104px;
 	background-color: transparent;
 	line-height: 100px;
-	letter-spacing: -3px;
 	font-size: 100px;
+	letter-spacing: -3px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -49,10 +50,10 @@
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -69,10 +70,10 @@
 	opacity: 0.25;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
 	filter: alpha(opacity=25);
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -93,8 +94,8 @@
 	min-height: 753px;
 	background-color: transparent;
 	line-height: 57px;
-	letter-spacing: -2px;
 	font-size: 52px;
+	letter-spacing: -2px;
 	font-family: Courier New, Courier, monospace;
 	position: relative;
 	margin-right: -10000px;
@@ -123,10 +124,10 @@
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -138,8 +139,8 @@
 	min-height: 50px;
 	background-color: transparent;
 	line-height: 22px;
-	letter-spacing: 0px;
 	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -152,8 +153,8 @@
 	min-height: 40px;
 	background-color: transparent;
 	line-height: 12px;
-	letter-spacing: 0px;
 	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -169,7 +170,6 @@
 	font-size: 10px;
 	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	margin-top: 1px;
 	position: relative;
 }
 
@@ -179,12 +179,12 @@
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	margin-top: 42px;
+	margin-top: 43px;
 	position: relative;
 }
 
@@ -199,10 +199,10 @@
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -214,10 +214,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -231,8 +231,8 @@
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -243,10 +243,10 @@
 	width: 226px;
 	min-height: 70px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -258,10 +258,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -275,8 +275,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -287,10 +287,10 @@
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -302,10 +302,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -319,8 +319,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -331,10 +331,10 @@
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -346,10 +346,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -363,8 +363,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -375,10 +375,10 @@
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -390,10 +390,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -407,8 +407,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -425,10 +425,10 @@
 	width: 226px;
 	min-height: 70px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -440,10 +440,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -457,8 +457,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
@@ -476,10 +476,10 @@
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
-	line-height: 22px;
-	letter-spacing: 0px;
-	font-size: 18px;
 	color: #000000;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -491,10 +491,10 @@
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -508,8 +508,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 656px;
 	position: relative;
@@ -528,8 +528,8 @@
 	min-height: 102px;
 	background-color: transparent;
 	line-height: 100px;
-	letter-spacing: -3px;
 	font-size: 100px;
+	letter-spacing: -3px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -555,8 +555,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 14px;
-	letter-spacing: 0px;
 	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -570,8 +570,8 @@
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 14px;
-	letter-spacing: 0px;
 	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
