--- a/phone/css/index.css
+++ b/phone/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00001B;
-	background-color: #0DC057;
+	color: #0000FE;
+	background-color: #DE922C;
 }
 
 @-ms-viewport
@@ -47,21 +47,21 @@
 
 #page_position_content
 {
-	margin-top: -28px;
+	margin-top: -30px;
 	margin-bottom: -61px;
+	width: 0.01px;
 }
 
 #u142-4
 {
 	z-index: 2;
-	width: 299px;
+	width: 320px;
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 60px;
-	letter-spacing: -3px;
 	font-size: 60px;
+	letter-spacing: -3px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	margin-left: 10px;
 	position: relative;
 }
 
@@ -69,19 +69,19 @@
 {
 	width: 0.01px;
 	margin-left: 10px;
-	margin-top: 7px;
+	margin-top: 10px;
 }
 
 #u147-4
 {
-	z-index: 22;
+	z-index: 26;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -89,17 +89,17 @@
 
 #u148-4
 {
-	z-index: 26;
+	z-index: 30;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
 	opacity: 0.25;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
 	filter: alpha(opacity=25);
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -112,13 +112,13 @@
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
-	margin-top: 12px;
+	margin-top: 11px;
 	position: relative;
 }
 
@@ -129,8 +129,8 @@
 	min-height: 40px;
 	background-color: transparent;
 	line-height: 19px;
-	letter-spacing: 0px;
 	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -143,18 +143,18 @@
 	min-height: 40px;
 	background-color: transparent;
 	line-height: 12px;
-	letter-spacing: 0px;
 	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
 	left: 206px;
 }
 
-#u176-4
+#u146-4
 {
-	z-index: 199;
-	width: 196px;
+	z-index: 22;
+	width: 210px;
 	min-height: 20px;
 	background-color: transparent;
 	font-size: 10px;
@@ -167,13 +167,13 @@
 
 #u149-36
 {
-	z-index: 30;
+	z-index: 34;
 	width: 299px;
 	min-height: 600px;
 	background-color: transparent;
 	line-height: 40px;
-	letter-spacing: -2px;
 	font-size: 36px;
+	letter-spacing: -2px;
 	font-family: Courier New, Courier, monospace;
 	margin-left: 10px;
 	margin-top: 29px;
@@ -187,14 +187,14 @@
 
 #u150-4
 {
-	z-index: 66;
+	z-index: 70;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
-	line-height: 14px;
-	letter-spacing: 0px;
-	font-size: 12px;
 	color: #000000;
+	line-height: 14px;
+	font-size: 12px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	margin-top: 40px;
@@ -209,14 +209,14 @@
 
 #u152-6
 {
-	z-index: 78;
+	z-index: 82;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -224,14 +224,14 @@
 
 #u166-6
 {
-	z-index: 150;
+	z-index: 154;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -240,13 +240,13 @@
 
 #u159-4
 {
-	z-index: 120;
+	z-index: 124;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	margin-top: 10px;
@@ -255,14 +255,14 @@
 
 #u151-8
 {
-	z-index: 70;
+	z-index: 74;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -270,14 +270,14 @@
 
 #u165-6
 {
-	z-index: 144;
+	z-index: 148;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -286,13 +286,13 @@
 
 #u158-4
 {
-	z-index: 116;
+	z-index: 120;
 	width: 196px;
 	min-height: 50px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -300,14 +300,14 @@
 
 #u157-6
 {
-	z-index: 110;
+	z-index: 114;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -315,14 +315,14 @@
 
 #u171-6
 {
-	z-index: 180;
+	z-index: 184;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -331,13 +331,13 @@
 
 #u161-4
 {
-	z-index: 128;
+	z-index: 132;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -345,14 +345,14 @@
 
 #u156-6
 {
-	z-index: 104;
+	z-index: 108;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -360,14 +360,14 @@
 
 #u170-6
 {
-	z-index: 174;
+	z-index: 178;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -376,13 +376,13 @@
 
 #u160-4
 {
-	z-index: 124;
+	z-index: 128;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -397,14 +397,14 @@
 
 #u153-6
 {
-	z-index: 84;
+	z-index: 88;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -412,14 +412,14 @@
 
 #u167-6
 {
-	z-index: 156;
+	z-index: 160;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -428,13 +428,13 @@
 
 #u162-4
 {
-	z-index: 132;
+	z-index: 136;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -449,14 +449,14 @@
 
 #u155-8
 {
-	z-index: 96;
+	z-index: 100;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -464,14 +464,14 @@
 
 #u169-6
 {
-	z-index: 168;
+	z-index: 172;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -480,13 +480,13 @@
 
 #u164-4
 {
-	z-index: 140;
+	z-index: 144;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -501,14 +501,14 @@
 
 #u154-6
 {
-	z-index: 90;
+	z-index: 94;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 19px;
-	letter-spacing: 0px;
-	font-size: 16px;
 	color: #000000;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -516,14 +516,14 @@
 
 #u168-6
 {
-	z-index: 162;
+	z-index: 166;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
-	line-height: 12px;
-	letter-spacing: 0px;
-	font-size: 10px;
 	color: #000000;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -532,13 +532,13 @@
 
 #u163-4
 {
-	z-index: 136;
+	z-index: 140;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 15px;
-	font-size: 10px;
 	color: #000000;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	margin-left: 10px;
 	position: relative;
@@ -552,13 +552,13 @@
 
 #u172-4
 {
-	z-index: 186;
+	z-index: 190;
 	width: 299px;
 	min-height: 75px;
 	background-color: transparent;
 	line-height: 60px;
-	letter-spacing: -3px;
 	font-size: 60px;
+	letter-spacing: -3px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -567,7 +567,8 @@
 
 #u173
 {
-	z-index: 190;
+	z-index: 194;
+	min-height: 45px;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
@@ -576,13 +577,13 @@
 
 #u174-4
 {
-	z-index: 191;
+	z-index: 195;
 	width: 100px;
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 12px;
-	letter-spacing: 0px;
 	font-size: 10px;
+	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -592,13 +593,13 @@
 
 #u175-4
 {
-	z-index: 195;
+	z-index: 199;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
 	line-height: 12px;
-	font-size: 10px;
 	text-align: right;
+	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -608,9 +609,9 @@
 
 #u173-bw
 {
-	z-index: 190;
+	z-index: 194;
+	min-height: 45px;
 	margin-top: 26px;
-	height: 45px;
 }
 
 body
