SUBBEAT w/ TREKKIE TRAX 업데이트
SUBBEAT w/ TREKKIE TRAX 업데이트

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00000D;
-	background-color: #1B8ECA;
+	color: #0000EB;
+	background-color: #1E1164;
 }
 
 .html
@@ -13,12 +13,11 @@
 {
 	z-index: 1;
 	width: 964px;
-	min-height: 986.8499999999999px;
+	min-height: 987px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -114,6 +113,7 @@
 #pu111-4
 {
 	width: 0.01px;
+	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-left: 656px;
 }
@@ -132,11 +132,11 @@
 	position: relative;
 }
 
-#u80-6
+#u80-10
 {
 	z-index: 63;
 	width: 226px;
-	min-height: 50px;
+	min-height: 109px;
 	background-color: transparent;
 	line-height: 22px;
 	font-size: 18px;
@@ -146,9 +146,14 @@
 	margin-right: -10000px;
 }
 
+#u80-8
+{
+	font-style: normal;
+}
+
 #u81-6
 {
-	z-index: 115;
+	z-index: 119;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -163,13 +168,14 @@
 
 #u94-4
 {
-	z-index: 121;
+	z-index: 125;
 	width: 226px;
-	min-height: 20px;
+	min-height: 40px;
 	background-color: transparent;
 	font-size: 10px;
 	line-height: 15px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-top: 10px;
 	position: relative;
 }
 
@@ -184,18 +190,100 @@
 	font-size: 12px;
 	letter-spacing: 0px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	margin-top: 43px;
+	margin-top: 30px;
 	position: relative;
 }
 
-#pu75-4,#pu80-6,#pu97-6
+#pu75-4,#pu80-10,#pu185-6
 {
 	width: 0.01px;
 }
 
+#u185-6
+{
+	z-index: 224;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u186-6
+{
+	z-index: 230;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u187-4
+{
+	z-index: 236;
+	width: 226px;
+	min-height: 20px;
+	background-color: transparent;
+	font-size: 10px;
+	line-height: 15px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
+#u176-6
+{
+	z-index: 208;
+	width: 226px;
+	min-height: 50px;
+	background-color: transparent;
+	line-height: 22px;
+	font-size: 18px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u177-6
+{
+	z-index: 214;
+	width: 82px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 226px;
+}
+
+#u178-4
+{
+	z-index: 220;
+	width: 226px;
+	min-height: 20px;
+	background-color: transparent;
+	font-size: 10px;
+	line-height: 15px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+}
+
 #u97-6
 {
-	z-index: 77;
+	z-index: 81;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -210,7 +298,7 @@
 
 #u98-6
 {
-	z-index: 159;
+	z-index: 163;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -226,7 +314,7 @@
 
 #u99-4
 {
-	z-index: 129;
+	z-index: 133;
 	width: 226px;
 	min-height: 60px;
 	background-color: transparent;
@@ -239,7 +327,7 @@
 
 #u83-8
 {
-	z-index: 69;
+	z-index: 73;
 	width: 226px;
 	min-height: 70px;
 	background-color: transparent;
@@ -254,7 +342,7 @@
 
 #u84-6
 {
-	z-index: 153;
+	z-index: 157;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -270,7 +358,7 @@
 
 #u95-4
 {
-	z-index: 125;
+	z-index: 129;
 	width: 226px;
 	min-height: 30px;
 	background-color: transparent;
@@ -281,9 +369,15 @@
 	position: relative;
 }
 
+#pu176-6,#pu97-6,#pu83-8,#pu117-6
+{
+	width: 0.01px;
+	margin-top: 20px;
+}
+
 #u117-6
 {
-	z-index: 109;
+	z-index: 113;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -298,7 +392,7 @@
 
 #u118-6
 {
-	z-index: 189;
+	z-index: 193;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -314,7 +408,7 @@
 
 #u119-4
 {
-	z-index: 137;
+	z-index: 141;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -325,9 +419,16 @@
 	position: relative;
 }
 
+#pu85-6
+{
+	width: 0.01px;
+	margin-left: 656px;
+	margin-top: 7px;
+}
+
 #u85-6
 {
-	z-index: 103;
+	z-index: 107;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -342,7 +443,7 @@
 
 #u86-6
 {
-	z-index: 183;
+	z-index: 187;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -358,7 +459,7 @@
 
 #u96-4
 {
-	z-index: 133;
+	z-index: 137;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -366,12 +467,15 @@
 	color: #000000;
 	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 656px;
+	top: -1px;
+	margin-bottom: -1px;
 	position: relative;
 }
 
 #u89-6
 {
-	z-index: 83;
+	z-index: 87;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -386,7 +490,7 @@
 
 #u90-6
 {
-	z-index: 165;
+	z-index: 169;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -402,7 +506,7 @@
 
 #u104-4
 {
-	z-index: 141;
+	z-index: 145;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -410,18 +514,13 @@
 	color: #000000;
 	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 656px;
 	position: relative;
-}
-
-#pu83-8,#pu117-6,#pu85-6,#pu89-6,#pu107-8
-{
-	width: 0.01px;
-	margin-top: 20px;
 }
 
 #u107-8
 {
-	z-index: 95;
+	z-index: 99;
 	width: 226px;
 	min-height: 70px;
 	background-color: transparent;
@@ -436,7 +535,7 @@
 
 #u105-6
 {
-	z-index: 177;
+	z-index: 181;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -452,7 +551,7 @@
 
 #u106-4
 {
-	z-index: 149;
+	z-index: 153;
 	width: 226px;
 	min-height: 30px;
 	background-color: transparent;
@@ -460,19 +559,20 @@
 	color: #000000;
 	font-size: 10px;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 656px;
 	position: relative;
 }
 
-#pu108-6
+#pu89-6,#pu107-8,#pu108-6
 {
 	width: 0.01px;
 	margin-left: 656px;
-	margin-top: 19px;
+	margin-top: 20px;
 }
 
 #u108-6
 {
-	z-index: 89;
+	z-index: 93;
 	width: 226px;
 	min-height: 50px;
 	background-color: transparent;
@@ -487,7 +587,7 @@
 
 #u110-6
 {
-	z-index: 171;
+	z-index: 175;
 	width: 82px;
 	min-height: 40px;
 	background-color: transparent;
@@ -503,7 +603,7 @@
 
 #u109-4
 {
-	z-index: 145;
+	z-index: 149;
 	width: 226px;
 	min-height: 20px;
 	background-color: transparent;
@@ -537,7 +637,7 @@
 
 #u114
 {
-	z-index: 195;
+	z-index: 199;
 	width: 964px;
 	border-style: none;
 	border-color: transparent;
@@ -550,7 +650,7 @@
 
 #u79-4
 {
-	z-index: 196;
+	z-index: 200;
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
@@ -565,7 +665,7 @@
 
 #u115-4
 {
-	z-index: 200;
+	z-index: 204;
 	width: 308px;
 	min-height: 20px;
 	background-color: transparent;
