--- a/phone/css/index.css
+++ b/phone/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000FE;
-	background-color: #DE922C;
+	color: #000004;
+	background-color: #5C075D;
 }
 
 @-ms-viewport
@@ -74,7 +74,7 @@
 
 #u147-4
 {
-	z-index: 26;
+	z-index: 30;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
@@ -89,7 +89,7 @@
 
 #u148-4
 {
-	z-index: 30;
+	z-index: 34;
 	width: 144px;
 	min-height: 20px;
 	background-color: transparent;
@@ -122,11 +122,11 @@
 	position: relative;
 }
 
-#u144-6
+#u144-10
 {
 	z-index: 10;
 	width: 196px;
-	min-height: 40px;
+	min-height: 100px;
 	background-color: transparent;
 	line-height: 19px;
 	font-size: 16px;
@@ -136,9 +136,14 @@
 	margin-right: -10000px;
 }
 
+#u144-8
+{
+	font-style: normal;
+}
+
 #u145-6
 {
-	z-index: 16;
+	z-index: 20;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -153,9 +158,9 @@
 
 #u146-4
 {
-	z-index: 22;
-	width: 210px;
-	min-height: 20px;
+	z-index: 26;
+	width: 196px;
+	min-height: 40px;
 	background-color: transparent;
 	font-size: 10px;
 	line-height: 15px;
@@ -167,7 +172,7 @@
 
 #u149-36
 {
-	z-index: 34;
+	z-index: 38;
 	width: 299px;
 	min-height: 600px;
 	background-color: transparent;
@@ -176,7 +181,7 @@
 	letter-spacing: -2px;
 	font-family: Courier New, Courier, monospace;
 	margin-left: 10px;
-	margin-top: 29px;
+	margin-top: 40px;
 	position: relative;
 }
 
@@ -187,7 +192,7 @@
 
 #u150-4
 {
-	z-index: 70;
+	z-index: 74;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -201,15 +206,101 @@
 	position: relative;
 }
 
-#pu144-6,#pu152-6
+#pu144-10,#pu199-6
 {
 	width: 0.01px;
 	margin-left: 10px;
 }
 
+#u199-6
+{
+	z-index: 207;
+	width: 196px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u200-6
+{
+	z-index: 213;
+	width: 93px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 206px;
+}
+
+#u201-4
+{
+	z-index: 219;
+	width: 196px;
+	min-height: 30px;
+	background-color: transparent;
+	font-size: 10px;
+	line-height: 15px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 10px;
+	margin-top: 10px;
+	position: relative;
+}
+
+#u202-6
+{
+	z-index: 223;
+	width: 196px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 19px;
+	font-size: 16px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u203-6
+{
+	z-index: 229;
+	width: 93px;
+	min-height: 40px;
+	background-color: transparent;
+	line-height: 12px;
+	font-size: 10px;
+	letter-spacing: 0px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	position: relative;
+	margin-right: -10000px;
+	left: 206px;
+}
+
+#u204-4
+{
+	z-index: 235;
+	width: 210px;
+	min-height: 20px;
+	background-color: transparent;
+	font-size: 10px;
+	line-height: 15px;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	margin-left: 10px;
+	margin-top: 11px;
+	position: relative;
+}
+
 #u152-6
 {
-	z-index: 82;
+	z-index: 86;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -224,7 +315,7 @@
 
 #u166-6
 {
-	z-index: 154;
+	z-index: 158;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -240,7 +331,7 @@
 
 #u159-4
 {
-	z-index: 124;
+	z-index: 128;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -255,7 +346,7 @@
 
 #u151-8
 {
-	z-index: 74;
+	z-index: 78;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -270,7 +361,7 @@
 
 #u165-6
 {
-	z-index: 148;
+	z-index: 152;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -286,7 +377,7 @@
 
 #u158-4
 {
-	z-index: 120;
+	z-index: 124;
 	width: 196px;
 	min-height: 50px;
 	background-color: transparent;
@@ -298,9 +389,16 @@
 	position: relative;
 }
 
+#pu157-6
+{
+	width: 0.01px;
+	margin-left: 10px;
+	margin-top: 19px;
+}
+
 #u157-6
 {
-	z-index: 114;
+	z-index: 118;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -315,7 +413,7 @@
 
 #u171-6
 {
-	z-index: 184;
+	z-index: 188;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -331,7 +429,7 @@
 
 #u161-4
 {
-	z-index: 132;
+	z-index: 136;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
@@ -345,7 +443,7 @@
 
 #u156-6
 {
-	z-index: 108;
+	z-index: 112;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -360,7 +458,7 @@
 
 #u170-6
 {
-	z-index: 178;
+	z-index: 182;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -376,7 +474,7 @@
 
 #u160-4
 {
-	z-index: 128;
+	z-index: 132;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -388,7 +486,7 @@
 	position: relative;
 }
 
-#pu151-8,#pu157-6,#pu156-6,#pu153-6
+#pu202-6,#pu152-6,#pu151-8,#pu156-6,#pu153-6
 {
 	width: 0.01px;
 	margin-left: 10px;
@@ -397,7 +495,7 @@
 
 #u153-6
 {
-	z-index: 88;
+	z-index: 92;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -412,7 +510,7 @@
 
 #u167-6
 {
-	z-index: 160;
+	z-index: 164;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -428,7 +526,7 @@
 
 #u162-4
 {
-	z-index: 136;
+	z-index: 140;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -444,12 +542,12 @@
 {
 	width: 0.01px;
 	margin-left: 10px;
-	margin-top: 17px;
+	margin-top: 18px;
 }
 
 #u155-8
 {
-	z-index: 100;
+	z-index: 104;
 	width: 196px;
 	min-height: 60px;
 	background-color: transparent;
@@ -464,7 +562,7 @@
 
 #u169-6
 {
-	z-index: 172;
+	z-index: 176;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -480,7 +578,7 @@
 
 #u164-4
 {
-	z-index: 144;
+	z-index: 148;
 	width: 196px;
 	min-height: 30px;
 	background-color: transparent;
@@ -501,7 +599,7 @@
 
 #u154-6
 {
-	z-index: 94;
+	z-index: 98;
 	width: 196px;
 	min-height: 40px;
 	background-color: transparent;
@@ -516,7 +614,7 @@
 
 #u168-6
 {
-	z-index: 166;
+	z-index: 170;
 	width: 93px;
 	min-height: 40px;
 	background-color: transparent;
@@ -532,7 +630,7 @@
 
 #u163-4
 {
-	z-index: 140;
+	z-index: 144;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -547,12 +645,12 @@
 #pu172-4
 {
 	width: 0.01px;
-	margin-top: 63px;
+	margin-top: 46px;
 }
 
 #u172-4
 {
-	z-index: 190;
+	z-index: 194;
 	width: 299px;
 	min-height: 75px;
 	background-color: transparent;
@@ -567,7 +665,7 @@
 
 #u173
 {
-	z-index: 194;
+	z-index: 198;
 	min-height: 45px;
 	border-style: none;
 	border-color: transparent;
@@ -577,7 +675,7 @@
 
 #u174-4
 {
-	z-index: 195;
+	z-index: 199;
 	width: 100px;
 	min-height: 20px;
 	background-color: transparent;
@@ -593,7 +691,7 @@
 
 #u175-4
 {
-	z-index: 199;
+	z-index: 203;
 	width: 196px;
 	min-height: 20px;
 	background-color: transparent;
@@ -609,7 +707,7 @@
 
 #u173-bw
 {
-	z-index: 194;
+	z-index: 198;
 	min-height: 45px;
 	margin-top: 26px;
 }
